# mir_govorit_backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: admin.py  models.py  urls.py  views.py
app/management/commands/: create_objects.py
app/migrations/: 0001_initial.py  0002_alter_recipeproduct_options_and_more.py  0003_rename_weight_recipeproduct_weight_in_grams.py
backend/: settings.py
templates/: recipe.html
