[tool.poetry]
name = "mir-govorit-backend"
version = "0.1.0"
description = "backend_django_app"
authors = ["Mikhail Moskovkin <anstane228@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
